# badminton_fixtures

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
badminton_fixtures/: generator.py  ingestor.py
badminton_fixtures/utils/: config.py
config/: config.yaml
data/: fixtures.xlsx
