[tool.poetry]
name = "badminton-fixtures"
version = "0.1.0"
description = ""
authors = ["AidanInceer <aidaninceer0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
black = "^24.10.0"
openpyxl = "^3.1.5"
pydantic = "^2.9.2"
python-box = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
